<resources>
    <string name="app_name">Food Chain</string>
    <string name="producer">Producers</string>
    <string name="previousCodes">Previous Tags</string>
    <string name="history">History</string>
    <string name="transporter">Transporters</string>
    <string name="intermediaries">Intermediaries</string>
    <string name="newProducer">New Producer</string>
    <string name="producerName">Producer Name</string>
    <string name="producerCertificate">Producer Certificate</string>
    <string name="username">Producer Username</string>
    <string name="passwd">Password</string>
    <string name="account">Ethereum Account</string>
    <string name="action">All Action</string>
    <string name="certificate">All Certificate</string>
    <string name="website">Website</string>
    <string name="licences">Licences</string>
    <string name="otherLicenses">Other licenses</string>
    <string name="enterList">Enter List</string>
    <string name="createLicencse">Create Licenses</string>
    <string name="createAction">Create Action</string>
    <string name="certificateName">Certificate Name</string>
    <string name="processAction">Processes and actions</string>
    <string name="cancel">Cancel</string>
    <string name="editLicense">Edit Licenses</string>
    <string name="done">Done</string>
    <string name="productTag">Product Tags</string>
    <string name="newProductTag">New Product Tag</string>
    <string name="selectProcess">Select processes and actions </string>
    <string name="printQR">Print QR code</string>
    <string name="readQR">Read QR code</string>
    <string name="generateQr">Generate QR</string>
    <string name="New">New</string>
    <string name="date">Date</string>
    <string name="product">Product</string>
    <string name="scanner">Scanner</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="mapview">Map view</string>
    <string name="objectInfo">Object information</string>
    <string name="productName">Product name</string>
    <string name="viewMap">View on map:</string>
    <string name="back">Back</string>
    <string name="generating_qr_code">Generating QR</string>
    <string name="qr_is_ready">QR is ready to print!</string>
    <string name="success">Success</string>
    <string name="qr_date">Date</string>
    <string name="qr_time">Time</string>
    <string name="scan_message">Please scan previous product!</string>
    <string name="product_created">Product Tag is successfully created!</string>
    <string name="qr_creation_error">Error while generating QR code!</string>
    <string name="invalid_response">Invalid Response!</string>
    <string name="try_again">Please try again or re-login!</string>
    <string name="producer_created">Producer created successfully</string>
    <string name="producer_creation_error">Error while creating producer</string>
    <string name="producer_name_error">Please enter producer name</string>
    <string name="producer_certificate_error">Please enter certificate name</string>
    <string name="producer_username_error">Please enter producer username</string>
    <string name="producer_password_error">Please enter producer password</string>
    <string name="producer_ethereum_error">Please enter Ethereum Account name</string>
    <string name="producer_url_error">Please enter website url</string>
    <string name="scan_new_qr">Scan</string>
    <string name="create_new_action_text">Create New Action</string>
    <string name="action_name">Action Name</string>
    <string name="create_action_settings">Create</string>
    <string name="create_new_certificate_text">Create New Certificate</string>
    <string name="certificate_name">Certificate Name</string>
    <string name="create_certificate_settings">Create</string>
    <string name="generate_qr_message">Please generate QR Code before printing</string>
    <string name="select_actions_msg">Please select actions!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_settings">Settings</string>
    <string name="button_print">Print</string>
    <string name="button_printer_settings">Printer Settings</string>
    <string name="button_update_firm">Update Firm</string>
    <string name="button_transfer_template">Transfer Template</string>
    <string name="button_get_firmver">Get Firm Version</string>
    <string name="button_get_mediaver">Get Media Version</string>
    <string name="button_get_serialnum">Get Serial Number</string>
    <string name="button_get_systemreport">Get System Report</string>
    <string name="button_send_mediainfo">Send Media Info</string>
    <string name="button_check_firm_file">Check Firm File Ver</string>
    <string name="button_check_media_file">Check Media File Ver</string>
    <string name="button_remove_template">Remove Template</string>
    <string name="button_select_file">Select File</string>
    <string name="button_select">Select</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_get_list">Get List</string>
    <string name="button_bluetooth_settings">Bluetooth Settings</string>
    <string name="button_network_settings">Network Settings</string>
    <string name="button_device_settings">Device Settings</string>
    <string name="supported_device">PJ-7XX/RJ-4030Ai/RJ-2XXX</string>
    <string name="mw_series">MW Series</string>
    <string name="file_explorer_title">File Explorer</string>
    <string name="button_printer_status">Printer Status</string>
    <string name="button_send_binfile">Send File</string>
    <string name="button_multi_print">Multi Print</string>
    <string name="text_select_pdz">Select a pdz or blf file</string>
    <string name="text_select_image">Select image/prn file</string>
    <string name="text_input_data">Input Data:</string>
    <string name="text_template_Index">Index:</string>
    <string name="text_template_name">Name:</string>
    <string name="text_template_text">Text:</string>
    <string name="text_template_key">Template Key:</string>
    <string name="text_template_replace_texts">Replace Texts:</string>
    <string name="text_select_pdf">Select a pdf file</string>
    <string name="text_pdf_pages_start">Start Page:</string>
    <string name="text_pdf_pages_end">End Page:</string>
    <string name="chkbox_multiple_select">Multiple Select</string>
    <string name="chkbox_all_pages">All pages</string>
    <string name="text_print_image">Print Image/Prn File</string>
    <string name="text_print_pdf">Print Pdf File</string>
    <string name="text_print_template">Print Template</string>
    <string name="text_transfer_manager">Manage Templates</string>
    <string name="text_transfer_pdz">Transfer Template File</string>
    <string name="text_device_setting">Device Settings</string>
    <string name="text_remove_template">Remove Template File</string>
    <string name="text_not_exit_template">Template does not exit.</string>
    <string name="unable_access">Unable Access…</string>
    <string name="no_network_device">No Net Printer Found</string>
    <string name="setting_printer">Basic Settings</string>
    <string name="printer_title">Printer</string>
    <string name="printer_text">Select a destination printer</string>
    <string name="setting_label">Settings</string>
    <string name="about_label">About</string>
    <string name="about_title">Brother Print Sdk Demo</string>
    <string name="about_text">Ver.3.0.11\n© 2017 Brother Industries, Ltd.\n</string>
    <string name="netPrinterListTitle_label">Net Printer</string>
    <string name="progress_dialog_message_preparing_connection">Preparing the connection…</string>
    <string name="progress_dialog_message_createData">Creating the data</string>
    <string name="progress_dialog_message_sendingData">Sending the data…</string>
    <string name="progress_dialog_message_sendingPrintingData">Sending the data…</string>
    <string name="progress_dialog_message_startPrint">Printing the data </string>
    <string name="progress_dialog_message_dataSent">The data was sent </string>
    <string name="progress_dialog_message_printed">The printing process was completed </string>
    <string name="progress_dialog_message_close_connection">Closing the connection</string>
    <string name="progress_dialog_message_set_paper">Please Set Paper</string>
    <string name="progress_dialog_message_cooling_start">Printer cooling start</string>
    <string name="progress_dialog_message_cooling_end">Printer cooling end</string>
    <string name="progress_dialog_message_waiting_peel">Wait for peeling label</string>
    <string name="progress_dialog_message_sending_template">File transferring</string>
    <string name="progress_dialog_message_getting_bluetooth_setting">Getting Bluetooth settings </string>
    <string name="progress_dialog_message_setting_bluetooth_setting">Transferring Bluetooth settings </string>
    <string name="progress_dialog_message_removing_template">Removing templates </string>
    <string name="progress_dialog_message_getting_template">Getting template list </string>
    <string name="error_message_none">Succeeded</string>
    <string name="error_message_runtime">Runtime error occurred </string>
    <string name="printer_model_title">PrinterModel</string>
    <string name="printer_model_value">Select the printer model </string>
    <string name="error_message_weong_os">Android OS is not supported</string>
    <string name="error_message_no_usb">USB device is not found</string>
    <string name="port_title">Port</string>
    <string name="port_value">Select the port</string>
    <string name="address_title">IP address</string>
    <string name="address_value">Set the number of ip address </string>
    <string name="mac_address_title">MAC address</string>
    <string name="mac_address_value">Set the number of mac address </string>
    <string name="paper_size_title">Paper size</string>
    <string name="paper_size_value">Select the paper size </string>
    <string name="orientation_title">Printing orientation</string>
    <string name="orientation_value">Select the printing orientation </string>
    <string name="trim_tape_after_data_title">Cutting zero lines </string>
    <string name="trim_tape_after_data_value">Select the cutting zero lines</string>
    <string name="tethering_title">Tethering</string>
    <string name="tethering_value">Select the tethering</string>
    <string name="number_of_copies_title">Number of copies</string>
    <string name="number_of_copies_value">Set the number of copies </string>
    <string name="halftoning_title">Half toning</string>
    <string name="halftoning_value">Select the half toning method </string>
    <string name="overwrite_title">Overwrite the file</string>
    <string name="overwrite_value">Select the overwrite mode </string>
    <string name="image_thresholding_title">Threshold of simple binary</string>
    <string name="image_thresholding_value">Select the threshold </string>
    <string name="scale_value_title">Scale value</string>
    <string name="scale_value_value">Select the scale value </string>
    <string name="send">Send</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="are_you_sure_to_discard">Are you sure to discard?</string>
    <string name="discard">Discard</string>
    <string name="discard_qr_code">Discard QR Code</string>
    <string name="sanning_qr_code">sanning QR code</string>
    <string name="are_you_sure_it_s_first_product">Are you sure it\'s first product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wallet">wallet</string>
</resources>