<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_product"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/product" />

    <item
        android:id="@+id/navigation_producer"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/producer" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/scanner" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/setting" />
    <item
        android:id="@+id/navigation_wallet"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/wallet" />
</menu>