<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="180sp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvDeleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sanning_qr_code"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10sp"
        >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_it_s_first_product"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:gravity="center">
        <Button
            android:id="@+id/btnYes"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/no"
            android:layout_marginLeft="10sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>



</LinearLayout>