<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.NewProductQrCodeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray">

        <ImageView
            android:id="@+id/back"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:src="@drawable/less_than"
            android:layout_marginTop="14sp"
            android:layout_marginLeft="15sp"/>

        <TextView
            android:id="@+id/tvProducer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productTag"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@id/back"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvNewProducer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvProducer"
            android:layout_toRightOf="@id/back"
            android:text="@string/newProductTag"
            android:textColor="@color/black"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:textSize="22sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <Button
            android:id="@+id/btnReadQRcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/readQR"
            android:layout_gravity="center"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnGenerateQRcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/generateQr"
            android:layout_gravity="center"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textSize="16sp"
            android:layout_marginLeft="40sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:textColor="@color/white"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectProcess"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="15sp"
        android:textSize="18sp"/>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_newProductTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue"
        android:text="@string/printQR"
        android:layout_gravity="center"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:textColor="@color/white"/>

</LinearLayout>