<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="1500"
    tools:context=".Fragments.EditLicensesFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="200"
    android:background="@color/lightGray">
    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginLeft="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editLicense"
        android:textColor="@color/black"
        android:layout_below="@id/tvCancel"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="15sp"/>
</RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_weight="1050"
        android:id="@+id/rv_editLicenses"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:background="@color/lightGray"
        android:padding="10sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otherLicenses"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginLeft="15sp"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tvCreateLicense"
        android:layout_weight="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="10sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createLicencse"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:layout_marginLeft="15sp"
            />

        <ImageView
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:src="@drawable/greater"
            android:layout_gravity="right"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2sp"
            android:layout_marginRight="20sp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15sp"
        android:background="@color/lightGray"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_weight="50"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue"
        android:text="@string/done"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="5sp"
        android:gravity="center"/>


</LinearLayout>